feat: add social links to sidebar with i18n support

--- a/lang/ac.json
+++ b/lang/ac.json
@@ -8,6 +8,9 @@
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE ! ASSEYEZ-VOUS UN P'TIT BOUTTE POU' WOUÈRE LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
     "sidebar_about_title": "C'est qui Alex ?",
     "sidebar_about_text": "Salut ! Je suis Alex, un artiste d'la ville. J'aime ça capter l'essence de la vie sous toutes ses formes.",
+    "sidebar_links_title": "Mes liens",
+    "sidebar_github": "Mon GitHub",
+    "sidebar_linkedin": "Mon LinkedIn",
     "sidebar_status_title": "État des lieux",
     "sidebar_status_available": "Disponible pour des commandes, là !",
     "sidebar_construction": "Le site est encore en construction !",
