--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,9 @@
     "marquee": "*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE THE GALLERIES *** UPDATED: FEB 2026 ***",
     "sidebar_about_title": "About Me",
     "sidebar_about_text": "Hello! I am Alex, an artist based in the city. I love capturing the essence of life in all its forms.",
+    "sidebar_links_title": "Links",
+    "sidebar_github": "My GitHub",
+    "sidebar_linkedin": "My LinkedIn",
     "sidebar_status_title": "Status",
     "sidebar_status_available": "Available for Commissions!",
     "sidebar_construction": "Site under construction!",
