--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,6 +8,9 @@
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE PORTFOLIO ! PRENEZ VOTRE TEMPS POUR PARCOURIR LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
     "sidebar_about_title": "À Propos",
     "sidebar_about_text": "Bonjour ! Je suis Alex, un artiste basé en ville. J'aime capturer l'essence de la vie sous toutes ses formes.",
+    "sidebar_links_title": "Liens",
+    "sidebar_github": "Mon GitHub",
+    "sidebar_linkedin": "Mon LinkedIn",
     "sidebar_status_title": "Statut",
     "sidebar_status_available": "Disponible pour des commandes !",
     "sidebar_construction": "Site en construction !",
