--- a/lang/ht.json
+++ b/lang/ht.json
@@ -7,7 +7,10 @@
     "header_subtitle": "Selebre Bote atravè Penti, Kreyon, ak Lantiy",
     "marquee": "*** BYENVENI SOU NOUVO SIT PÒTFOLYO MWEN AN! RÈTE YON TI MOMAN POU GADE GALERI YO *** MIZ AJOU: FEB 2026 ***",
     "sidebar_about_title": "Sou Mwen",
-    "sidebar_about_text": "Bonjou! Mwen se Alex, yon atis ki baze nan lavil la. Mwen renmen kaptire sans lavi a nan tout fòm li.",
+    "sidebar_about_text": "Bonjou! Mwen se Alex, yon atis ki baze nan vil la. Mwen renmen kaptire sans lavi a nan tout fòm li.",
+    "sidebar_links_title": "Lyen yo",
+    "sidebar_github": "GitHub mwen",
+    "sidebar_linkedin": "LinkedIn mwen",
     "sidebar_status_title": "Sitiyasyon",
     "sidebar_status_available": "Disponib pou Komisyon!",
     "sidebar_construction": "Sit la an konstriksyon!",
