--- a/lang/mx.json
+++ b/lang/mx.json
@@ -7,7 +7,10 @@
     "header_subtitle": "Celebrando la Belleza a través de la Pintura, el Lápiz y el Lente",
     "marquee": "*** ¡BIENVENIDO A MI NUEVO SITIO PORTAFOLIO! QUÉDATE UN RATO Y EXPLORA LAS GALERÍAS *** ACTUALIZADO: FEB 2026 ***",
     "sidebar_about_title": "Sobre Mí",
-    "sidebar_about_text": "¡Hola! Soy Alex, un artista basado en la ciudad. Me encanta capturar la esencia de la vida en todas sus formas.",
+    "sidebar_about_text": "¡Hola! Soy Alex, un artist basado en la ciudad. Me encanta capturar la esencia de la vida en todas sus formas.",
+    "sidebar_links_title": "Enlaces",
+    "sidebar_github": "Mi GitHub",
+    "sidebar_linkedin": "Mi LinkedIn",
     "sidebar_status_title": "Estado",
     "sidebar_status_available": "¡Disponible para encargos!",
     "sidebar_construction": "¡Sitio en construcción!",
