--- a/lang/qc.json
+++ b/lang/qc.json
@@ -7,7 +7,10 @@
     "header_subtitle": "Célébrer la beauté avec d'la peintu', du crayon pis mon Kodak",
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE ! PRENDS TON TEMPS POUR CHECKER LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
     "sidebar_about_title": "C'est qui Alex ?",
-    "sidebar_about_text": "Salut là ! Je suis Alex, un gars de la ville qui fait de l'art. J'aime ça pogner l'essence de la vie peu importe la forme.",
+    "sidebar_about_text": "Salut ! Je suis Alex, un gars de la ville qui fait de l'art. J'aime ça pogner l'essence de la vie peu importe la forme.",
+    "sidebar_links_title": "Mes liens",
+    "sidebar_github": "Mon GitHub",
+    "sidebar_linkedin": "Mon LinkedIn",
     "sidebar_status_title": "C'est quoi l'plan ?",
     "sidebar_status_available": "Dispo pour des contrats !",
     "sidebar_construction": "Le site est encore en construction, là !",
