--- a/lang/ac.json
+++ b/lang/ac.json
@@ -3,6 +3,7 @@
     "nav_art": "Art (Peinture/Dessin)",
     "nav_photo": "Photographie",
     "nav_street": "La Vie de par chez nous",
+    "nav_projects": "Mes pwojets de code",
     "header_title": "Le Portfolio à Alex",
     "header_subtitle": "Célébrer la beauté par la peinture, le crayon pis l'objectif",
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE ! ASSEYEZ-VOUS UN P'TIT BOUTTE POU' WOUÈRE LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
@@ -14,6 +15,8 @@
     "sidebar_status_title": "État des lieux",
     "sidebar_status_available": "Disponible pour des commandes, là !",
     "sidebar_construction": "Le site est encore en construction !",
+    "sidebar_radio_title": "La Radio à Alex",
+    "sidebar_radio_playing": "Kou m'joue ça :",
     "footer_copy": "© 2026 L'Art à Alex. Tous droits réservés.",
     "footer_browser": "Mieux wouè avec Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Visiteurs :",
@@ -43,5 +46,9 @@
     "photo_intro": "Mon objectif se concentre sus la beauté tranquille d'la nature pis le calme du monde.",
     "street_candid": "Des moments d'ville pris sus le vif",
     "street_intro": "La photo de rue, c'est trouver d'la beauté dans le bordel. C'est l'art de capter le moment.",
-    "street_marquee": ">>> ON FAIT LE TOUR DES RUES <<< ON CAPTE L'INVISIBLE <<< VIE URBAINE 2026 <<<"
+    "street_marquee": ">>> ON FAIT LE TOUR DES RUES <<< ON CAPTE L'INVISIBLE <<< VIE URBAINE 2026 <<<",
+    "projects_title": "Pwojets de code",
+    "projects_subtitle": "Des patentes numériques",
+    "projects_intro": "Quand j'peins pas, j'bats la f'raille avec du code.",
+    "projects_view_code": "Wouère le code"
 }
