--- a/lang/fr.json
+++ b/lang/fr.json
@@ -3,6 +3,7 @@
     "nav_art": "Art (Peinture/Dessin)",
     "nav_photo": "Photographie",
     "nav_street": "Vie Urbaine",
+    "nav_projects": "Projets",
     "header_title": "Le Portfolio Artistique d'Alex",
     "header_subtitle": "Célébrer la Beauté par la Peinture, le Crayon et l'Objectif",
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE PORTFOLIO ! PRENEZ VOTRE TEMPS POUR PARCOURIR LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
@@ -14,6 +15,8 @@
     "sidebar_status_title": "Statut",
     "sidebar_status_available": "Disponible pour des commandes !",
     "sidebar_construction": "Site en construction !",
+    "sidebar_radio_title": "La Radio d'Alex",
+    "sidebar_radio_playing": "En lecture :",
     "footer_copy": "© 2026 Alex's Art. Tous droits réservés.",
     "footer_browser": "Optimisé pour Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Visiteurs :",
@@ -43,5 +46,9 @@
     "photo_intro": "Mon objectif se concentre sur la beauté tranquille de la nature et le calme du monde.",
     "street_candid": "Moments urbains spontanés",
     "street_intro": "La photographie de rue consiste à trouver la beauté dans le chaos. C'est l'art du moment décisif.",
-    "street_marquee": ">>> EXPLORATION DES RUES <<< CAPTURER L'INVISIBLE <<< STREET LIFE 2026 <<<"
+    "street_marquee": ">>> EXPLORATION DES RUES <<< CAPTURER L'INVISIBLE <<< STREET LIFE 2026 <<<",
+    "projects_title": "Projets Informatiques",
+    "projects_subtitle": "Créations numériques et expériences logicielles",
+    "projects_intro": "Quand je ne peins pas, je construis des choses avec du code.",
+    "projects_view_code": "Voir le code"
 }
