--- a/lang/ht.json
+++ b/lang/ht.json
@@ -3,6 +3,7 @@
     "nav_art": "Atizay (Penti/Desen)",
     "nav_photo": "Fotografi",
     "nav_street": "Lavi nan Ri",
+    "nav_projects": "Pwojè yo",
     "header_title": "Pòtfolyo Atistik Alex",
     "header_subtitle": "Selebre Bote atravè Penti, Kreyon, ak Lantiy",
     "marquee": "*** BYENVENI SOU NOUVO SIT PÒTFOLYO MWEN AN! RÈTE YON TI MOMAN POU GADE GALERI YO *** MIZ AJOU: FEB 2026 ***",
@@ -14,6 +15,8 @@
     "sidebar_status_title": "Sitiyasyon",
     "sidebar_status_available": "Disponib pou Komisyon!",
     "sidebar_construction": "Sit la an konstriksyon!",
+    "sidebar_radio_title": "Radyo Alex",
+    "sidebar_radio_playing": "Kounye a ap jwe:",
     "footer_copy": "© 2026 Alex's Art. Tout dwa rezève.",
     "footer_browser": "Pi bon pou gade nan Netscape Navigator oswa Internet Explorer 6.0",
     "footer_visitors": "Vizitè yo:",
@@ -43,5 +46,9 @@
     "photo_intro": "Lantiy mwen konsantre sou bote trankil nati a ak kalm nwayo a nan mond lan.",
     "street_candid": "Moman Iben Spontane",
     "street_intro": "Fotografi lari se jwenn bote nan dezòd la. Se atizay moman desizif la.",
-    "street_marquee": ">>> EKSPLORE LARI YO <<< KAPTIVE SA KI PA WE YO <<< LAVI NAN RI 2026 <<<"
+    "street_marquee": ">>> EKSPLORE LARI YO <<< KAPTIVE SA KI PA WE YO <<< LAVI NAN RI 2026 <<<",
+    "projects_title": "Pwojè IT ak Kodaj",
+    "projects_subtitle": "Travay nimerik ak eksperyans lojisyèl",
+    "projects_intro": "Lè m pa pentire, m bati bagay ak kòd.",
+    "projects_view_code": "Wè kòd"
 }
