--- a/lang/qc.json
+++ b/lang/qc.json
@@ -3,6 +3,7 @@
     "nav_art": "Art (Peintu'/Dessin)",
     "nav_photo": "Photos",
     "nav_street": "Vie de ruelle",
+    "nav_projects": "Mes patentes",
     "header_title": "L'portfolio à Alex",
     "header_subtitle": "Célébrer la beauté avec d'la peintu', du crayon pis mon Kodak",
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE ! PRENDS TON TEMPS POUR CHECKER LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
@@ -14,6 +15,8 @@
     "sidebar_status_title": "C'est quoi l'plan ?",
     "sidebar_status_available": "Dispo pour des contrats !",
     "sidebar_construction": "Le site est encore en construction, là !",
+    "sidebar_radio_title": "La Radio à Alex",
+    "sidebar_radio_playing": "Ça joue ça :",
     "footer_copy": "© 2026 L'Art à Alex. Tous droits réservés.",
     "footer_browser": "Check ça avec Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Y'a eu combien d'monde :",
@@ -43,5 +46,9 @@
     "photo_intro": "Mon Kodak se concentre su' la beauté tranquille d'la nature pis l'calme du monde.",
     "street_candid": "Des moments d'ville pris su'l vif",
     "street_intro": "La photo de rue, c'est trouver d'la beauté dans l'bordel. C'est l'art de pogner l'moment.",
-    "street_marquee": ">>> ON FAIT LE TOUR DES RUES <<< ON POGNE L'INVISIBLE <<< VIE URBAINE 2026 <<<"
+    "street_marquee": ">>> ON FAIT LE TOUR DES RUES <<< ON POGNE L'INVISIBLE <<< VIE URBAINE 2026 <<<",
+    "projects_title": "Mes patentes de code",
+    "projects_subtitle": "Des programmes pis d'autres bébelles",
+    "projects_intro": "Quand j'peins pas, j'gosse après du code.",
+    "projects_view_code": "Check le code"
 }
