feat: enhance media player with playlist and video support

--- a/lang/ac.json
+++ b/lang/ac.json
@@ -50,5 +50,8 @@
     "projects_title": "Pwojets de code",
     "projects_subtitle": "Des patentes numériques",
     "projects_intro": "Quand j'peins pas, j'bats la f'raille avec du code.",
-    "projects_view_code": "Wouère le code"
+    "projects_view_code": "Wouère le code",
+    "sidebar_radio_select": "Choisis ta musique :",
+    "sidebar_video_title": "La p'tite TV",
+    "sidebar_video_note": "Clique pour jouer/arrêter"
 }
