--- a/lang/ht.json
+++ b/lang/ht.json
@@ -50,5 +50,8 @@
     "projects_title": "Pwojè IT ak Kodaj",
     "projects_subtitle": "Travay nimerik ak eksperyans lojisyèl",
     "projects_intro": "Lè m pa pentire, m bati bagay ak kòd.",
-    "projects_view_code": "Wè kòd"
+    "projects_view_code": "Wè kòd",
+    "sidebar_radio_select": "Chwazi tras la:",
+    "sidebar_video_title": "Tib Retro",
+    "sidebar_video_note": "Klike pou Jwe/Pòz"
 }
