--- a/lang/qc.json
+++ b/lang/qc.json
@@ -50,5 +50,8 @@
     "projects_title": "Mes patentes de code",
     "projects_subtitle": "Des programmes pis d'autres bébelles",
     "projects_intro": "Quand j'peins pas, j'gosse après du code.",
-    "projects_view_code": "Check le code"
+    "projects_view_code": "Check le code",
+    "sidebar_radio_select": "Choisis ta tune :",
+    "sidebar_video_title": "Ta p'tite TV",
+    "sidebar_video_note": "Pèse pour jouer/arrêter"
 }
