--- a/lang/mx.json
+++ b/lang/mx.json
@@ -2,7 +2,7 @@
     "nav_home": "Inicio",
     "nav_art": "Arte (Pintura/Dibujo)",
     "nav_photo": "Fotografía",
-    "nav_street": "Vida Urbana",
+    "nav_sculpting": "Escultura",
     "nav_projects": "Proyectos",
     "header_title": "Portafolio Artístico de Alex",
     "header_subtitle": "Celebrando la Belleza a través de la Pintura, el Lápiz y el Lente",
@@ -53,5 +53,10 @@
     "projects_view_code": "Ver código",
     "sidebar_radio_select": "Seleccionar pista:",
     "sidebar_video_title": "Tubo Retro",
-    "sidebar_video_note": "Clic para Play/Pausa"
+    "sidebar_video_note": "Clic para Play/Pausa",
+    "sculpting_title": "Galería de Escultura",
+    "sculpting_subtitle": "Obras en Arcilla, Piedra y Metal",
+    "sculpting_intro": "Explorando la forma y el espacio a través de medios táctiles.",
+    "photo_consolidated_title": "Portafolio de Fotografía",
+    "photo_consolidated_subtitle": "Desde Paisajes hasta Vida Urbana"
 }
