--- a/lang/qc.json
+++ b/lang/qc.json
@@ -2,7 +2,7 @@
     "nav_home": "Accueil",
     "nav_art": "Art (Peintu'/Dessin)",
     "nav_photo": "Photos",
-    "nav_street": "Vie de ruelle",
+    "nav_sculpting": "Mes Gossages",
     "nav_projects": "Mes patentes",
     "header_title": "L'portfolio à Alex",
     "header_subtitle": "Célébrer la beauté avec d'la peintu', du crayon pis mon Kodak",
@@ -53,5 +53,10 @@
     "projects_view_code": "Check le code",
     "sidebar_radio_select": "Choisis ta tune :",
     "sidebar_video_title": "Ta p'tite TV",
-    "sidebar_video_note": "Pèse pour jouer/arrêter"
+    "sidebar_video_note": "Pèse pour jouer/arrêter",
+    "sculpting_title": "Galerie de Gossage",
+    "sculpting_subtitle": "Affaires en terre pis en roche",
+    "sculpting_intro": "Gosser des formes pis de l'espace avec mes mains.",
+    "photo_consolidated_title": "Mes p'tites photos",
+    "photo_consolidated_subtitle": "De la garnotte à la grande ville"
 }
