feat: add content dating and hosting documentation

--- a/lang/ac.json
+++ b/lang/ac.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 L'Art à Alex. Tous droits réservés.",
     "footer_browser": "Mieux wouè avec Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Visiteurs :",
+    "footer_last_updated": "Dernière mise à jour :",
+    "gallery_added_on": "Ajouté l' :",
     "index_welcome": "Bienvenue dans ma galerie numérique !",
     "index_intro": "Ce site icitte, c'est une collection de mes ouvrages préférés. Je me spécialise dans la peinture traditionnelle, le fusain pis la photographie de rue.",
     "index_featured": "En vedette : \"Morning Dreams\" (Huile sus toile)",
