--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 Alex's Art. All rights reserved.",
     "footer_browser": "Best viewed in Netscape Navigator or Internet Explorer 6.0",
     "footer_visitors": "Visitors:",
+    "footer_last_updated": "Last Updated:",
+    "gallery_added_on": "Added on:",
     "index_welcome": "Welcome to my digital gallery!",
     "index_intro": "This website is a collection of my favorite works. I specialize in traditional painting, charcoal drawing, and urban photography.",
     "index_featured": "Featured: \"Morning Dreams\" (Oil on Canvas)",
