--- a/lang/fr.json
+++ b/lang/fr.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 Alex's Art. Tous droits réservés.",
     "footer_browser": "Optimisé pour Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Visiteurs :",
+    "footer_last_updated": "Dernière mise à jour :",
+    "gallery_added_on": "Ajouté le :",
     "index_welcome": "Bienvenue dans ma galerie numérique !",
     "index_intro": "Ce site est une collection de mes œuvres favorites. Je me spécialise dans la peinture traditionnelle, le dessin au fusain et la photographie urbaine.",
     "index_featured": "En vedette : \"Morning Dreams\" (Huile sur toile)",
