--- a/lang/ht.json
+++ b/lang/ht.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 Alex's Art. Tout dwa rezève.",
     "footer_browser": "Pi bon pou gade nan Netscape Navigator oswa Internet Explorer 6.0",
     "footer_visitors": "Vizitè yo:",
+    "footer_last_updated": "Dènye Mizajou:",
+    "gallery_added_on": "Ajoute nan dat:",
     "index_welcome": "Byenvini nan galeri nimerik mwen an!",
     "index_intro": "Sit entènèt sa a se yon koleksyon travay mwen pi renmen. Mwen espesyalize nan penti tradisyonèl, desen chabon, ak fotografi iben.",
     "index_featured": "An Vedèt: \"Morning Dreams\" (Lwil sou twal)",
