--- a/lang/mx.json
+++ b/lang/mx.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 Alex's Art. Todos los derechos reservados.",
     "footer_browser": "Mejor visto en Netscape Navigator o Internet Explorer 6.0",
     "footer_visitors": "Visitantes:",
+    "footer_last_updated": "Última actualización:",
+    "gallery_added_on": "Agregado el:",
     "index_welcome": "¡Bienvenido a mi galería digital!",
     "index_intro": "Este sitio web es una colección de mis obras favoritas. Me especializo en pintura tradicional, dibujo al carbón y fotografía urbana.",
     "index_featured": "Destacado: \"Morning Dreams\" (Óleo sobre lienzo)",
