--- a/lang/qc.json
+++ b/lang/qc.json
@@ -20,6 +20,8 @@
     "footer_copy": "© 2026 L'Art à Alex. Tous droits réservés.",
     "footer_browser": "Check ça avec Netscape Navigator ou Internet Explorer 6.0",
     "footer_visitors": "Y'a eu combien d'monde :",
+    "footer_last_updated": "Dernière gosse :",
+    "gallery_added_on": "Mis là l' :",
     "index_welcome": "Bienvenue dans ma galerie su'l web !",
     "index_intro": "Ce site-là, c'est une collection de mes affaires préférées. Je fais surtout d'la peintu' traditionnelle, du fusain pis d'la photo de rue.",
     "index_featured": "Le highlight : \"Morning Dreams\" (Huile su' toile)",
