--- a/lang/en.json
+++ b/lang/en.json
@@ -36,7 +36,7 @@
     "gallery_drawing": "Drawing",
     "photo_title": "Photography",
     "photo_subtitle": "Capturing Moments in Time",
-    "photo_nature": "Nature & Landscapes",
+    "photo_nature": "People & Cities",
     "photo_portraits": "Portraits",
     "street_title": "The Street Life",
     "street_subtitle": "Unfiltered Moments from the Urban Jungle",
@@ -45,7 +45,7 @@
     "gallery_intro": "Exploring the boundary between reality and imagination through traditional techniques.",
     "gallery_back": "Back to Home",
     "photo_collections": "Collections",
-    "photo_intro": "My lens focuses on the quiet beauty of nature and the stillness of the world.",
+    "photo_intro": "My lens focuses on the energy of urban life — the faces, the streets, and the stories that unfold in the city.",
     "street_candid": "Candid Urban Moments",
     "street_intro": "Street photography is about finding beauty in the chaos. It's the art of the decisive moment.",
     "street_marquee": ">>> EXPLORING THE STREETS <<< CAPTURING THE UNSEEN <<< STREET LIFE 2026 <<<",
@@ -60,5 +60,5 @@
     "sculpting_subtitle": "3D Works in Clay, Stone, and Metal",
     "sculpting_intro": "Exploring form and space through tactile mediums.",
     "photo_consolidated_title": "Photography Portfolio",
-    "photo_consolidated_subtitle": "From Landscapes to Urban Life"
+    "photo_consolidated_subtitle": "People & Cities — Street Life Through the Lens"
 }
