--- a/lang/fr.json
+++ b/lang/fr.json
@@ -36,7 +36,7 @@
     "gallery_drawing": "Dessin",
     "photo_title": "Photographie",
     "photo_subtitle": "Capturer des moments dans le temps",
-    "photo_nature": "Nature & Paysages",
+    "photo_nature": "Gens & Villes",
     "photo_portraits": "Portraits",
     "street_title": "The Street Life",
     "street_subtitle": "Moments bruts de la jungle urbaine",
@@ -45,7 +45,7 @@
     "gallery_intro": "Explorer la frontière entre réalité et imagination à travers des techniques traditionnelles.",
     "gallery_back": "Retour à l'accueil",
     "photo_collections": "Collections",
-    "photo_intro": "Mon objectif se concentre sur la beauté tranquille de la nature et le calme du monde.",
+    "photo_intro": "Mon objectif se concentre sur l'énergie de la vie urbaine — les visages, les rues et les histoires qui se déroulent dans la ville.",
     "street_candid": "Moments urbains spontanés",
     "street_intro": "La photographie de rue consiste à trouver la beauté dans le chaos. C'est l'art du moment décisif.",
     "street_marquee": ">>> EXPLORATION DES RUES <<< CAPTURER L'INVISIBLE <<< STREET LIFE 2026 <<<",
@@ -60,5 +60,5 @@
     "sculpting_subtitle": "Œuvres en Argile, Pierre et Métal",
     "sculpting_intro": "Explorer la forme et l'espace à travers des médiums tactiles.",
     "photo_consolidated_title": "Portefeuille de Photographie",
-    "photo_consolidated_subtitle": "Des Paysages à la Vie Urbaine"
+    "photo_consolidated_subtitle": "Gens & Villes — La vie de rue à travers l'objectif"
 }
