--- a/lang/ht.json
+++ b/lang/ht.json
@@ -36,7 +36,7 @@
     "gallery_drawing": "Desen",
     "photo_title": "Fotografi",
     "photo_subtitle": "Kaptire Momant nan Tan an",
-    "photo_nature": "Lanati ak Peyizaj",
+    "photo_nature": "Moun ak Vil",
     "photo_portraits": "Pòtre",
     "street_title": "The Street Life",
     "street_subtitle": "Moman san filtè nan Forè Iben an",
@@ -45,7 +45,7 @@
     "gallery_intro": "Eksplore fwontyè ant reyalite ak imajinasyon atravè teknik tradisyonèl yo.",
     "gallery_back": "Tounen nan Akèy",
     "photo_collections": "Koleksyon yo",
-    "photo_intro": "Lantiy mwen konsantre sou bote trankil nati a ak kalm nwayo a nan mond lan.",
+    "photo_intro": "Lantiy mwen konsantre sou enèji lavi nan vil la — figi yo, lari yo, ak istwa ki devlope nan vil la.",
     "street_candid": "Moman Iben Spontane",
     "street_intro": "Fotografi lari se jwenn bote nan dezòd la. Se atizay moman desizif la.",
     "street_marquee": ">>> EKSPLORE LARI YO <<< KAPTIVE SA KI PA WE YO <<< LAVI NAN RI 2026 <<<",
@@ -60,5 +60,5 @@
     "sculpting_subtitle": "Travay nan Ajil, Wòch, ak Metal",
     "sculpting_intro": "Eksplore fòm ak espas atravè medya tactile.",
     "photo_consolidated_title": "Pòtfolyo Fotografi",
-    "photo_consolidated_subtitle": "Soti nan Peyizaj rive nan Lavi nan Ri"
+    "photo_consolidated_subtitle": "Moun ak Vil — Lavi Lari Atravè Lantiy la"
 }
