--- a/lang/mx.json
+++ b/lang/mx.json
@@ -36,7 +36,7 @@
     "gallery_drawing": "Dibujo",
     "photo_title": "Fotografía",
     "photo_subtitle": "Capturando Momentos en el Tiempo",
-    "photo_nature": "Naturaleza y Paisajes",
+    "photo_nature": "Gente y Ciudades",
     "photo_portraits": "Retratos",
     "street_title": "The Street Life",
     "street_subtitle": "Momentos sin filtrar de la jungla urbana",
@@ -45,7 +45,7 @@
     "gallery_intro": "Explorando la frontera entre la realidad y la imaginación a través de técnicas tradicionales.",
     "gallery_back": "Volver al inicio",
     "photo_collections": "Colecciones",
-    "photo_intro": "Mi lente se centra en la belleza tranquila de la naturaleza y la quietud del mundo.",
+    "photo_intro": "Mi lente se enfoca en la energía de la vida urbana — los rostros, las calles y las historias que se desarrollan en la ciudad.",
     "street_candid": "Momentos urbanos espontáneos",
     "street_intro": "La fotografía de calle trata de encontrar la belleza en el caos. Es el arte del momento decisivo.",
     "street_marquee": ">>> EXPLORANDO LAS CALLES <<< CAPTURANDO LO INVISIBLE <<< VIDA URBANA 2026 <<<",
@@ -60,5 +60,5 @@
     "sculpting_subtitle": "Obras en Arcilla, Piedra y Metal",
     "sculpting_intro": "Explorando la forma y el espacio a través de medios táctiles.",
     "photo_consolidated_title": "Portafolio de Fotografía",
-    "photo_consolidated_subtitle": "Desde Paisajes hasta Vida Urbana"
+    "photo_consolidated_subtitle": "Gente y Ciudades — La vida callejera a través del lente"
 }
