--- a/lang/ht.json
+++ b/lang/ht.json
@@ -60,5 +60,19 @@
     "sculpting_subtitle": "Travay nan Ajil, Wòch, ak Metal",
     "sculpting_intro": "Eksplore fòm ak espas atravè medya tactile.",
     "photo_consolidated_title": "Pòtfolyo Fotografi",
-    "photo_consolidated_subtitle": "Moun ak Vil — Lavi Lari Atravè Lantiy la"
+    "photo_consolidated_subtitle": "Moun ak Vil — Lavi Lari Atravè Lantiy la",
+    "nav_music": "Mizik",
+    "music_title": "🎵 Mizik",
+    "music_subtitle": "Mizik Orijinal ak Konpozisyon",
+    "music_tracks_heading": "🎧 Tras yo",
+    "music_loading": "Ap chaje tras yo...",
+    "music_marquee": ">>> AP JWE KOUNYE A <<< KONPOZISYON ORIJINAL <<< KOUTE & JWI 2026 <<<",
+    "music_no_tracks": "Pa gen tras ankò. Ajoute mizik atravè panno administrasyon an!",
+    "music_load_error": "Pa t kapab chaje tras yo.",
+    "music_audio_unsupported": "Navigatè ou a pa sipòte odyo.",
+    "index_latest_loading": "Ap chaje dènye ajoute a...",
+    "index_latest_label": "⭐ DÈNYE AJOUTE ⭐",
+    "index_latest_added": "Ajoute:",
+    "index_latest_empty": "Pa gen okenn eleman nan galeri a ankò.",
+    "sidebar_radio_loading": "Ap chaje tras yo..."
 }
