--- a/lang/ht.json
+++ b/lang/ht.json
@@ -74,5 +74,6 @@
     "index_latest_label": "⭐ DÈNYE AJOUTE ⭐",
     "index_latest_added": "Ajoute:",
     "index_latest_empty": "Pa gen okenn eleman nan galeri a ankò.",
-    "sidebar_radio_loading": "Ap chaje tras yo..."
+    "sidebar_radio_loading": "Ap chaje tras yo...",
+    "sidebar_radio_no_tracks": "Pa gen tras disponib"
 }
