--- a/lang/en.json
+++ b/lang/en.json
@@ -3,7 +3,7 @@
     "nav_art": "Art (Paint/Draw)",
     "nav_photo": "Photography",
     "nav_sculpting": "Sculpting",
-    "nav_projects": "Projects",
+    "nav_projects": "Code",
     "header_title": "Alex's Artistic Portfolio",
     "header_subtitle": "Celebrating Beauty through Paint, Pencil, and Lens",
     "marquee": "*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE THE GALLERIES *** UPDATED: FEB 2026 ***",
