--- a/lang/fr.json
+++ b/lang/fr.json
@@ -3,7 +3,7 @@
     "nav_art": "Art (Peinture/Dessin)",
     "nav_photo": "Photographie",
     "nav_sculpting": "Sculpture",
-    "nav_projects": "Projets",
+    "nav_projects": "Code",
     "header_title": "Le Portfolio Artistique d'Alex",
     "header_subtitle": "Célébrer la Beauté par la Peinture, le Crayon et l'Objectif",
     "marquee": "*** BIENVENUE SUR MON NOUVEAU SITE PORTFOLIO ! PRENEZ VOTRE TEMPS POUR PARCOURIR LES GALERIES *** MIS À JOUR : FÉV 2026 ***",
