--- a/lang/ht.json
+++ b/lang/ht.json
@@ -3,7 +3,7 @@
     "nav_art": "Atizay (Penti/Desen)",
     "nav_photo": "Fotografi",
     "nav_sculpting": "Eskilti",
-    "nav_projects": "Pwojè yo",
+    "nav_projects": "Kòd",
     "header_title": "Pòtfolyo Atistik Alex",
     "header_subtitle": "Selebre Bote atravè Penti, Kreyon, ak Lantiy",
     "marquee": "*** BYENVENI SOU NOUVO SIT PÒTFOLYO MWEN AN! RÈTE YON TI MOMAN POU GADE GALERI YO *** MIZ AJOU: FEB 2026 ***",
