--- a/lang/mx.json
+++ b/lang/mx.json
@@ -3,7 +3,7 @@
     "nav_art": "Arte (Pintura/Dibujo)",
     "nav_photo": "Fotografía",
     "nav_sculpting": "Escultura",
-    "nav_projects": "Proyectos",
+    "nav_projects": "Código",
     "header_title": "Portafolio Artístico de Alex",
     "header_subtitle": "Celebrando la Belleza a través de la Pintura, el Lápiz y el Lente",
     "marquee": "*** ¡BIENVENIDO A MI NUEVO SITIO PORTAFOLIO! QUÉDATE UN RATO Y EXPLORA LAS GALERÍAS *** ACTUALIZADO: FEB 2026 ***",
