--- a/lang/en.json
+++ b/lang/en.json
@@ -75,5 +75,15 @@
     "index_latest_added": "Added:",
     "index_latest_empty": "No items in the gallery yet.",
     "sidebar_radio_loading": "Loading tracks...",
-    "sidebar_radio_no_tracks": "No tracks available"
+    "sidebar_radio_no_tracks": "No tracks available",
+    "detail_loading": "Loading...",
+    "detail_not_found": "Item not found.",
+    "detail_medium": "Medium:",
+    "detail_genre": "Genre:",
+    "detail_description": "Description",
+    "detail_listen": "Listen",
+    "detail_back": "Back to Gallery",
+    "detail_private": "Private",
+    "detail_public": "Public",
+    "detail_error": "Could not load item details."
 }
